--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hola soy una pagina principal</h1>
+    <a href="dos.html">Soy un enlace de prueba a otra pagina</a>
 </body>
 </html>
